; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/ntp/parseutil/extr_dcfd.c_periodic_adjust.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/ntp/parseutil/extr_dcfd.c_periodic_adjust.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@adjustments = common dso_local global i32 0, align 4
@clock_adjust = common dso_local global i32 0, align 4
@PHASE_WEIGHT = common dso_local global i64 0, align 8
@accum_drift = common dso_local global i32 0, align 4
@USECSCALE = common dso_local global i64 0, align 8
@ADJINTERVAL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @periodic_adjust to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @periodic_adjust() #0 {
  %1 = alloca i64, align 8
  %2 = load i32, i32* @adjustments, align 4
  %3 = add nsw i32 %2, 1
  store i32 %3, i32* @adjustments, align 4
  %4 = load i32, i32* @clock_adjust, align 4
  %5 = load i64, i64* @PHASE_WEIGHT, align 8
  %6 = call i64 @R_SHIFT(i32 %4, i64 %5)
  store i64 %6, i64* %1, align 8
  %7 = load i64, i64* %1, align 8
  %8 = load i32, i32* @clock_adjust, align 4
  %9 = sext i32 %8 to i64
  %10 = sub nsw i64 %9, %7
  %11 = trunc i64 %10 to i32
  store i32 %11, i32* @clock_adjust, align 4
  %12 = load i32, i32* @accum_drift, align 4
  %13 = load i64, i64* @USECSCALE, align 8
  %14 = load i64, i64* @ADJINTERVAL, align 8
  %15 = add nsw i64 %13, %14
  %16 = call i64 @R_SHIFT(i32 %12, i64 %15)
  %17 = load i64, i64* %1, align 8
  %18 = add nsw i64 %17, %16
  store i64 %18, i64* %1, align 8
  %19 = load i64, i64* %1, align 8
  %20 = call i32 @adj_time(i64 %19)
  ret void
}

declare dso_local i64 @R_SHIFT(i32, i64) #1

declare dso_local i32 @adj_time(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
